--- a/00-resumo.tex
+++ b/00-resumo.tex
@@ -1,27 +1,25 @@
 \chapter{Resumo}
 % Introduction
-Companies in any kind of industry, be it electronics, pharmaceutics, food, or others, need to support their operations by managing the exchange of information and resources with other companies. This flow of resources and information is commonly referred to as the supply chain. In a practical sense, the flow of products and services goes from supplier to consumer, but as supply chains grow more complex, they span multiple businesses and relationships, and are interlaced in many ways. This is a reason why supply chain management (SCM), the discipline which deals with the coordination of a supply chain, is becoming increasingly more important. The paths the information takes are not always obvious, making it hard to track either information or resources.
-
-% Introduction
+Em empresas de qualquer indústria, seja da indústria eletrónica, farmacêutica, alimentar ou outras, há uma necessidade de suportar as operações, gerindo a troca de informação e recursos com outras empresas. Este fluxo de recursos e informação é chamado de cadeia de logística. De forma mais prática, o fluxo de produtos e serviços flui de um fornecedor até ao consumidor final. No entanto, com o crescimento das cadeias de logística, estas têm vindo a ficar mais complexas, abrangindo multiplos negócios e relações empresariais, que por usa vez se entrelaçam de várias formas. Os caminhos que a informação toma nem sempre são óbvios, fazendo com que seja difícil rastrear e obter informação e recursos. É por esta razão que a gestão da cadeia de logística, a disciplina que lida com a coordenação da cadeia de logística, está a tornar-se cada vez mais importante. 
 
 % Problem
-Managing inventory and suppliers while maintaining safety, quality and keeping to the schedule is a difficult task. Delays are common, and a company’s finances, growth and reputation are affected. This is further aggravated by the fact that information is not always accurate or available when needed. And the fact that companies value their privacy makes it so that sharing information with others is not always simple or desirable. Furthermore, supply chains have many manual processes of inserting information into the companies systems, which are slow and error-prone.
+Gerir inventário, fornecedores e manter padrões de qualidade, segurança, assim como cumprir um plano calendarizado é uma tarefa difícil. Atrasos são comuns e as finanças de uma empresas, assim como o seu crescimento e reputação podem ser afetados. Isto é ainda agravado pelo facto de que a informação pode não ser exata ou então não estar disponível quando é necessária. O facto de as empresas também valorizarem a sua privacidade faz com que este processo de partilha de informação não seja sempre simples ou desejável. Além disso, as cadeias de logística têm muitos processos manuais de inserção de informação para os sistemas empresariais, sendo este um processo por vezes lento e propenso a erros.
 
 % Why is it a problem
-Provenance and traceability of a supply chain are a big objective for companies, along with improving security, efficiency and effectiveness. Most of these issues are, in great part, caused by the use of inadequate processes or even of inadequate software, which, traditionally, is centralized and often difficult to extend. The software used is also prone to synchronization problems, leading to big delays in both relaying the information and resources and making payments possible. 
+A rastreabilidade e informação sobre a origem de informação e produtos nas cadeias de logística é um grande objetivo das empresas, assim como melhorias na segurança, eficiência e eficácia da cadeia. A maioria destes problems são causados, em grande parte, pelo uso de processos de gestão inadequados ou então, por vezes, mesmo por programas informáticos inadequados. Estes últimos, tradicionalmente, usavam arquiteturas centralizadas e podiam ser difíceis de atualizar. Ao mesmo tempo, podem ser propensos a problemas de sincronização, levando a grandes atrasos tanto em transmitir a informação, como a transmitir recursos e até a realizar pagamentos.
 
 % Solution
-One way to approach these specific problems of supply chains is to prioritize them and update the supporting technologies with an updated architecture that can focus on solving them. One such technology that might be able to handle all the requirements that these problems elicit is the blockchain distributed architecture. Blockchain is a decentralized technology that has no single point of failure and allows for the immutable storage of verifiable data all over the computers that store it. With blockchain, information is stored sequentially and any piece of information, since the genesis of the chain is accessible anytime, anywhere. As such, blockchains might be the adequate mean to achieve traceability of a supply chain. At the same time they are a secure and incorruptible way to store information, with a fast synchronization time. This technology could possible lead the way to turning the chain fully digital and automated, closing the analog gaps and possibly achieving a more global overview of products and processes.
+Uma forma de abordar estes problemas específicos da cadeia de logística, é priorizá-los e atualizar as tecnologias que suportam a cadeia com uma arquitetura atualizada que possa ter focar-se em resolver estes problemas. Uma tecnologia que parecer ser capaz de aguentar com todos os requisitos que estes problemas levantam é a arquitetura distribuída de blockchain. A blockchain é uma tecnologia descentralizada que não tem pontos únicos de falha e permite armazenar informação de forma imutável e verificável nos computadores que a correrem. Com a blockchain, a informação é guardada de forma sequencial e qualquer parte da informação pode ser acedida em qualquer local e a qualquer hora. Assim, as blockchains podem ser a forma adequada de atingir a rastreabilidade numa cadeia de logística. Ao mesmo tempo, são seguras e uma forma incorruptível de guardar informação, com um tempo rápido de sincronização. Esta tecnologia poderá possívelmente conduzir a que a cadeia de logística se torne finalmente totalmente digital e automatizada, fechando os buracos de informação trazidos pelos processos manuais, e possivelmente alcançando uma visão global de processos e produtos.
 
-This dissertation focuses on researching the extent of the issues of supply chain management, and to what extent blockchain could be applied in a beneficial way to solve these issues. 
+Esta dissertação foca-se em estudar a extensão dos problemas da gestão da cadeia de logística, e em que medida a blockchain pode ser aplicada como forma benéfica de os resolver. A verdadeira declaração aqui defendida, ou que se está a tentar confirmar se é válida, é se as arquiteturas baseadas em blockchain podem então ser uma boa aplicação a usar para a gestão da cadeia de logística.
 
-To this end, a survey was conducted to elicit the most important issues and requirements for a supply chain. The objective was to gather the opinions of supply chain experts to form a list of the most important improvements and requirements of the supply chain. And even if these are the most important improvements, in general, this technology is not limited to them, giving way for other use cases to be explored.
+Para este fim, foram investigadas as suposições nas quais esta declaração se baseou. Um inquérito foi conduzido para descobrir quais os problemas mais importantes e os requisitos correspondestes da cadeia de logística. O objetivo era reunir um conjunto de opiniões de profissionais desta área e formar uma lista dos requisitos mais importantes, assim como melhorias a fazer á gestão desta cadeia. Mesmo assim, esta tecnologia pode não se limitar a estas melhorias, havendo bastantes casos de uso a explorar.
 
-But, more specifically, by using these requirements, it was possible to propose and iteratively build a blockchain architectural solution, aiming to test whether the gathered requirements are feasible to be implemented. 
+Mas, mais especificamente, usando estes requisitos levantados, é possível propor e construir iterativamente uma solução arquitetural da blockchain, com o objetivo de testar se os requisitos reunidos são passíveis de ser implementados. 
 
-In the end, the proposed system was analyzed against the elicited requirements, in order to verify the degree to which it was possible to implement them. From this verification, it was possible to draw some conclusions towards whether blockchain can be a good design for supply chain management or not. 
+No final, tornou-se possível propor e implementar um sistema, com base nos requisitos analisados, de forma a verificar a possibilidade da sua implementação e inclusão na arquitetura. Desta verificação, foi possível chegar a algumas conclusões sobre se a blockchain pode de facto ser um bom design para a gestão de cadeias de logística ou não.
 
-Whatever the conclusion, be it more affirmative or more negative in tone, the expectation is that the contributions here present might help pave the way for future work and research.
+A conclusão para este problema, no entanto, não teve como resposta um simples sim ou não, havendo alguma incerteza associada ao uso da tecnologia. O facto é que a arquitetura desenhada provou conseguir aguentar com a maioria dos requisitos necessários, mas a implementação de outros não foi conseguida, não sendo possível provar que são impossíveis de implementar por outras formas que não a desenhada. Futuros sistemas talvez consigam com mais sucesso implementar a totalidade dos requisitos. Assim, enquanto que esta resposta final é mais afirmativa que negativa, a expetativa é que as contribuições aqui presentes possam ajudar em futuros estudos e investigação na área.
 
 \textbf{Keywords:} Supply Chain, Supply Chain Management, Industry, Requirements, Supply Chain Issues, Supply Chain Improvement, Blockchain, Network, Decentralization, Security, Traceability, Provenance, Information Integration, Ledger, Interoperability, Auditing
 
