--- a/problemstatement.tex
+++ b/problemstatement.tex
@@ -143,4 +143,4 @@ After having answered all of the three questions that underlie the thesis statem
 
 %It follows a software engineering development agile pattern with phases 1 through 4 being iterated through;
 
-% Mention that survey didnt or possibly wouldnt come along soon enough to support a change in ALL the requirements, but some
+% Mention that survey did not or possibly wouldnt come along soon enough to support a change in ALL the requirements, but some
