--- a/survey/surveyconclusion.tex
+++ b/survey/surveyconclusion.tex
@@ -19,6 +19,8 @@ Most of the conclusions for the survey were summarized in the analysis of questi
 % \usepackage{multirow}
 \begin{table}[]
     \centering
+    \caption{Elicited requirements grouped by improvement area of focus.}
+    \label{table:elicited-requirements-survey}
     \begin{tabular}{|l|l|}
     \hline
     \textbf{Area}                                                                                              & \textbf{Requirements}                                                                                                              \\ \hline
@@ -32,11 +34,10 @@ Most of the conclusions for the survey were summarized in the analysis of questi
     \multirow{3}{*}{Synchronization}                                                                           & Interoperability between systems                                                                                                   \\ \cline{2-2} 
                                                                                                                & Development of industry standards                                                                                                  \\ \cline{2-2} 
                                                                                                                & \begin{tabular}[c]{@{}l@{}}Real-time sharing of information with partners, leading to \\ better working relationships\end{tabular} \\ \hline
-    \multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Transaction \\ Enforcement and\\ Financial domain\end{tabular}} & Financial transactions                                                                                                             \\ \cline{2-2} 
-                                                                                                               & Enforceable contracts (smart contract functionality)                                                                               \\ \hline
+    Transaction & Financial transactions                                                                                                             \\ \cline{2-2} 
+    Enforcement and  & Enforceable contracts (smart contract functionality)   \\
+    Financial domain & \\ \hline
     \end{tabular}
-    \caption{Elicited requirements grouped by improvement area of focus.}
-    \label{table:elicited-requirements-survey}
     \end{table}
 %%% TABLE END %%%%%%%%%%%%%%%
 
