--- a/thesis.tex
+++ b/thesis.tex
@@ -19,7 +19,6 @@
 \usepackage{soul} % provides yellow-marker highlighting among other features
 \usepackage{verbatim} % provides the 'comment' environment among other features
 \usepackage{xifthen} % provides \ifthenelse 
-\usepackage{multirow}
 \usepackage{enumitem}
 \usepackage{pbox}
 \usepackage[section]{placeins} % stops floats (figures, tables...) to appear outside the section where they are placed.
@@ -123,23 +122,15 @@
 	\mainmatter
 
 	%CONTENT
-	%\todo{pedro: resumo em portugues}
-	%\todo{pedro: dedicatoria e quote}
+	%\todo{IMP: dedicatoria e quote}
 	
 	%SURVEY
-	%pedro: compor imagens dos graficos}
-	%pedro: corrigir localizacoes das figuras}
+	%\todo{IMP: compor imagens dos graficos}
+	%\todo{IMP: corrigir localizacoes das figuras}
 
 	%TEXT CONSISTENCY, GRAMMAR CHECKS AND GENERAL WRITING
 	%\todo{pedro: consistent with the use of bold or italic, especially on thesis questions and in the items of the survey}
 	
-	%EXTRA FORMATTING
-	%\todo{pedro: fix the use of abbreviations so that they are more consistent}
-
-	%\todo{pedro}: corrigir conclusao do abstract
-	%\todo{pedro}: corrigir captions
-	%\todo{pedro}: atualizar a dedicatoria 
-
 	%\subsection*{2. Naming Conventions and Definitions}
 	%glossary + abreviations    \todo{fcorreia: isto devia aparecer talvez no início do documento, num glossário geral}
 
