New prettier images

--- a/survey/survey2.tex
+++ b/survey/survey2.tex
@@ -5,7 +5,7 @@ This section features some questions that inquire about the respondent's knowled
 
 \subsection*{1 - General Blockchain Knowledge.}
  %GRAFICO BLOCKCHAIN KNOWLEDGE
- \begin{figure}[h]
+ \begin{figure}[H]
 \centering
 \includegraphics[scale=0.65]{media/survey_group2/blockchain_knowledge.pdf}
 \caption{Question about Blockchain knowledge.}
@@ -35,7 +35,7 @@ The first affirmation states that a blockchain, any at all, independently of the
 
 \begin{figure}[h]
 \centering
-\includegraphics[scale=0.95]{media/survey_group2/blockchain_crypto_opinions.pdf}
+\includegraphics[scale=0.40]{media/survey_group2/blockchain_crypto_opinions.pdf}
 \caption{Question to rate affirmations about the use of cryptocurrencies in the blockchain.}
 \label{fig:blockchain_crypto_opinions}
 \end{figure}
