--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -47,7 +47,7 @@ Therefore, the following classification for the lists of results will be adopted
 \multicolumn{1}{|l|}{Traceability}                                                                  & 5    & 5      & 4,40  & 1,12                                                       & 3     & -1,67  \\ \hline
 \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Development\\ of Industry\\ Standards\end{tabular}} & 4    & 4      & 3,63 & 1,06                                                       & 3     & -0,36  \\ \hline
 \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Fraud\\ Detection\end{tabular}}                     & 5    & 5      & 4,13 & 1,18                                                       & 3     & -1,00  \\ \hline
-\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Automated\\ Information \\ Sharing\end{tabular}}    & 5    & 4      & 3,64 & 1,19                                                       & 3     & -0,200  \\ \hline
+\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Automated\\ Information \\ Sharing\end{tabular}}    & 5    & 4      & 3,64 & 1,19                                                       & 3     & -0,20  \\ \hline
 \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Better\\ Information\\ privacy\end{tabular}}        & 2    & 2      & 3,13 & 1,32                                                       & 3     & 0,51   \\ \hline
 \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Delivery\\ Schedules\end{tabular}}                  & 5    & 4      & 3,84 & 1,28                                                       & 4     & -0,71  \\ \hline
 \multicolumn{1}{|l|}{Supply Control}                                                                & 5    & 5      & 4,24 & 0,926                                                       & 3     & -0,87  \\ \hline
@@ -152,17 +152,21 @@ The importance ranking described as before follows below:
  
 %CHANGE IMAGES TO THE 2 GRAPHICS ABOUT USE CASES OF BC+SC AND BENEFITS OF BC+SC
 
-The final important group of questions featured 2 questions about the viability of applying blockchain to the supply chain. The first question asked people which use cases they thought were the best for applying blockchain to the supply chain and respondents could select a maximum of 3 options (including "None" or "Do not know").
+The final important group of questions featured 2 questions about the viability of applying blockchain to the supply chain. The results are shown in images~\ref{fig:blockchain_use_cases} and~\ref{fig:blockchain_benefits} The first question asked people which use cases they thought were the best for applying blockchain to the supply chain and respondents could select a maximum of 3 options (including "None" or "Do not know").
 
 \begin{figure}[h]
-    %\makebox[2pt]{}
-
-	\resfig{survey_group4/blockchain_usecases_sc}{Blockchain use cases for the supply chain}
-    \resfig{survey_group4/blockchain_application_benefits}{Blockchain benefits for the supply chain}
-    
-      \caption{Question: Blockchain use cases and benefits for the supply chain.}
-    \label{fig:group4_graphics}
+    \centering
+    \includegraphics[scale=0.60]{media/survey_group4/blockchain_usecases_sc.pdf}
+    \caption{Question about the Blockchain use cases for the supply chain.}
+    \label{fig:blockchain_use_cases}
 \end{figure}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[scale=0.60]{media/survey_group4/blockchain_application_benefits.pdf}
+    \caption{Question about the Blockchain benefits for the supply chain.}
+    \label{fig:blockchain_benefits}
+    \end{figure}
 
 \textbf{Starting with the analysis of the first question}:
 \begin{itemize}
